[tool.poetry]
name = "volttron-postgresql-historian"
version = "0.1.0-rc0"
description = "VOLTTRON historian agent that stores data in a PostgreSQL database. It extends the SQLHistorian class."
authors = ["VOLTTRON Team <volttron@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/eclipse-volttron/volttron-postgresql-historian"
homepage = "https://github.com/eclipse-volttron/volttron-postgresql-historian"
keywords = []
packages = [ { include = "historian", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
volttron-lib-sql-historian="^0.2.0rc0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
# formatting, quality, tests
pytest = "^6.2.5"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"
safety = "^1.10.3"
mypy = "^0.942"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
volttron-testing = "^0.4.0rc1"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.poetry.scripts]
volttron-postgresql-historian = "historian.sql.historian:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
